# Compulator

./: .~lock.tp.xlsx#  RMS.trash  a.trash  erunda.trash  gс+-  main.ccp  main.cpp  makefile  neerunda.trash  program  test  test.cpp  tp.xlsx  Описание лексем.docx  Правила порождения.xlsx  з.py
compulator_tests/: bubble_sort.txt  init_arr.txt  insertion_sort.txt
compulator_tests/GenOps_error/: mismatch_lexeme.txt  noinit_lexeme.txt  reinit_lexeme.txt  sintaksis_error.txt  unknown_state.txt
compulator_tests/interp_error/: index_out_of_range.txt  index_real_error.txt  mismatch_count.txt  mismatch_type.txt
compulator_tests/lexer_error/: unknown_rule.txt
include/: main.cpp
include/core/: Lexeme.hpp  Literal.hpp
include/genOPS/: GenOPS.h  Structs.h  genOPS.cpp  genOPS.h  getOPS.cpp  semantics.h  void genOPS(std::vector<Lexeme> prog) {
include/interp/: Struct.h  iterp.cpp  iterp.h  semantics.h
include/lexer/: LexemeLoader.cpp  lexer.cpp  lexer.h  semantics..h  semantics.h
includeLast/core/: Lexeme.hpp  Literal.hpp
includeLast/genOPS/: Structs.h  genOPS.cpp
includeLast/interp/: AddFunc.h  iterp.cpp  iterp.h
includeLast/lexer/: lexer.cpp  lexer.h  semantics.h
includeN/: additionalFunction.cpp  additionalFunction.h  input.txt  lexeme.json  main.cpp
includeWin/: AdditionalFunctions.h  CMakeLists.txt  EnumClasses.h  GenOPS.cpp  GenOPS.h  Lexeme.h  LexemeReader.h  Structs.h  include.txt  lexemereader.cpp  main.cpp  КС-грамматика.xlsx  Описание лексем.docx  Правила порождения.xlsx  Семантические программы.cpp
resources/lexemes/: LexemesTransf.xlsx  (+2 more)
(+2 files in other folders)
